# RPA-task

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
src/: main.py
src/api/: client.py  models.py
src/pages/: accounts_page.py  base_page.py  cards_page.py  dashboard_page.py  login_page.py  transactions_page.py  transfer_page.py
src/utils/: config_loader.py  constants.py  date_utils.py  excel_writer.py  logging_utils.py
src/workflows/: part1_auth.py  part2_accounts.py  part3_filters.py  part4_transfer.py  part5_cards.py  part6_api.py
